versions/v0.14/modules/en/pages/reference/cli/fleet-cli/fleet_apply.adoc
= fleet apply
:revdate: 2026-02-05
:page-revdate: {revdate}
:page-aliases: /fleet_apply

Create bundles from directories, and output them or apply them on a cluster

----
fleet apply [flags] BUNDLE_NAME PATH...
----

== Options

----
  -b, --bundle-file string                     Location of the raw Bundle resource yaml
      --bundle-creation-max-concurrency int    Number of concurrent routines to create bundles (default 4)
      --cacerts-file string                    Path of custom cacerts for helm repo
      --commit string                          Commit to assign to the bundle
  -c, --compress                               Force all resources to be compress
      --context string                         kubeconfig context for authentication
      --correct-drift                          Rollback any change made from outside of {product_name}
      --correct-drift-force                    Use --force when correcting drift. Resources can be deleted and recreated
      --correct-drift-keep-fail-history        Keep helm history for failed rollbacks
      --debug                                  Turn on debug logging
      --debug-level int                        If debugging is enabled, set klog -v=X
      --delete-namespace                       Delete GitRepo target namespace after the GitRepo or Bundle is deleted
  -f, --file string                            Location of the fleet.yaml
      --helm-credentials-by-path-file string   Path of file containing helm credentials for paths
      --helm-repo-url-regex string             Helm credentials will be used if the helm repo matches this regex. Credentials will always be used if this is empty or not provided
  -h, --help                                   help for apply
      --keep-resources                         Keep resources created after the GitRepo or Bundle is deleted
  -k, --kubeconfig string                      kubeconfig for authentication
  -l, --label strings                          Labels to apply to created bundles
  -n, --namespace string                       namespace (default "fleet-local")
      --oci-basic-http                         Use HTTP to access the OCI regustry
      --oci-insecure                           Allow connections to OCI registry without certs
      --oci-password-file string               Path of file containing basic auth password for OCI registry
      --oci-reference string                   OCI registry reference
      --ociusername string                     Basic auth username for OCI registry
  -o, --output string                          Output contents to file or - for stdout
      --password-file string                   Path of file containing basic auth password for helm repo
      --paused                                 Create bundles in a paused state
  -a, --service-account string                 Service account to assign to bundle created
      --ssh-privatekey-file string             Path of ssh-private-key for helm repo
      --sync-generation int                    Generation number used to force sync the deployment
      --target-namespace string                Ensure this bundle goes to this target namespace
      --targets-file string                    Addition source of targets and restrictions to be append
      --username string                        Basic auth username for helm repo
      --driven-scan                            Use driven scan. Bundles are defined by the user.
                                               Paths will be defined by the tuple <base, options> separated by a separator.
                                               The default separator is the character ':'. If you need to use a different one,
                                               use the --driven-scan-sep flag.
      --driven-scan-sep                        Separator used for user-driven bundle generation paths. (default: ':')
----

=== Good to know

`fleet apply` reads `known_hosts`` data from an environment variable (`FLEET_KNOWN_HOSTS`), similarly to what the git
cloner does.

This means that, should you want to run `fleet apply` directly on your host machine, providing it a custom
value of `KNOWN_HOSTS`, you need to export `FLEET_KNOWN_HOSTS` beforehand or run it as
`FLEET_KNOWN_HOSTS=<your_entries> fleet apply <args>`.

The number of concurrent bundle creation routines can be configured via the `--bundle-creation-max-concurrency` flag or the `FLEET_BUNDLE_CREATION_MAX_CONCURRENCY` environment variable. The default value is 4. This can be useful when working with large repositories containing many bundles, as it allows you to control the parallelism of bundle creation. For example:

`FLEET_BUNDLE_CREATION_MAX_CONCURRENCY=8 fleet apply <args>`

== SEE ALSO
* xref:/reference/cli/fleet-cli/fleet.adoc[ {product_name}]	 - Manage {product_name} operations
